Code Snippet_Organised - Resubmission-01-2025/OPA/unapproved-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unapproved-pod
  namespace: myapps
spec:
  containers:
    - name: unapproved-container
      image: nginx:latest
