Code Snippet_Organised - Resubmission-01-2025/OPA/opa-constraint-template-v1.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sapprovedimages
spec:
  crd:
    spec:
      names:
        kind: K8sApprovedImages
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sapprovedimages

        violation[{"msg": msg}] {
          input.review.object.kind == "Pod"
          image := input.review.object.spec.containers[_].image
          not approved_image(image)
          msg := sprintf("Unapproved image: %v", [image])
        }

        approved_image(image) {
          startswith(image, "913524928146.dkr.ecr.us-west-2.amazonaws.com/my-repo")
        }
