Code Snippet_Organised - Resubmission-01-2025/OPA/opa-constraint-v1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sApprovedImages
metadata:
  name: approved-image-check
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "myapps"  # This restricts the policy to the myapps namespace
